[package]
name = "p0sticcio_bot"
version = "0.18.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
chrono = "0.4.38"
chumsky = "0.9.3"
futures-util = "0.3.30"
tokio = { version = "1.40.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
] }
tokio-stream = "0.1.16"
reqwest = { version = "0.12.8", features = ["cookies"] }
ingress_intel_rs = { git = "https://github.com/nappa85/ingress-intel-rs.git" }
lru_time_cache = "0.11.11"
rust_decimal = "1.36.0"
sea-orm = { version = "1.0.1", features = [
    "macros",
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.33"
stream_throttle = "0.5.1"
tgbot = "0.30.0"
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
rust_decimal_macros = "1.36.0"
