[package]
name = "p0sticcio_bot"
version = "0.18.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
chrono = "0.4"
chumsky = "0.9"
futures-util = "0.3"
tokio = { version = "1.41", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["cookies"] }
ingress_intel_rs = { git = "https://github.com/nappa85/ingress-intel-rs.git" }
lru_time_cache = "0.11"
rust_decimal = "1.36"
sea-orm = { version = "1.1", features = [
    "debug-print",
    "macros",
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
stream_throttle = "0.5"
tgbot = "0.32"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
rust_decimal_macros = "1.36"
