[package]
name = "p0sticcio_bot"
version = "0.20.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
chrono = "0.4"
chumsky = "0.9"
futures-util = "0.3"
tokio = { version = "1.41", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["cookies"] }
ingress_intel_rs = { version = "0.8", git = "https://github.com/nappa85/ingress-intel-rs.git" }
lru_time_cache = "0.11"
sea-orm = { version = "1.1", features = [
    "debug-print",
    "macros",
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
smol_str = "0.3"
stream_throttle = "0.5"
tgbot = "0.40"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
